Some styling changes

--- a/style.css
+++ b/style.css
@@ -41,9 +41,10 @@ p {
 .btnContainer {
     margin-top: 20px;
     display: flex;
+    flex-direction: column;
     gap: 10px;
     flex-wrap: wrap;
-    justify-content: center;
+    align-items: center;
 }
 
 button, a {
